# prima

./: .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  1  CHANGELOG.txt  CMakeLists.txt  IDEAS  LICENCE.txt  MANIFEST.in  NAME  NEWS.md  NEWUOA_output-NSConflict-Zaikun ZHANG-linux5.11.15-051115-generic.txt  NEWUOA_output-NSConflict-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict-zaikunzhang-linux5.4.0-47-generic.txt  NEWUOA_output-NSConflict1038-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict1214-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict1485-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict1542-zaikunzhang-linux5.4.0-47-generic.txt  NEWUOA_output-NSConflict1559-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict1639-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict1657-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict1733-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict1834-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict1848-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict1939-zaikunzhang-linux5.4.0-47-generic.txt  NEWUOA_output-NSConflict2076-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict2077-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict2085-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict2132-zaikunzhang-linux5.4.0-47-generic.txt  NEWUOA_output-NSConflict2157-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict2200-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict2386-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict2693-Zaikun ZHANG-linux5.4.0-73-generic.txt  NEWUOA_output-NSConflict2694-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict2702-zaikunzhang-linux5.4.0-45-generic.txt  NEWUOA_output-NSConflict2899-zaikunzhang-linux5.4.0-47-generic.txt  NEWUOA_output-NSConflict2923-Zaikun ZHANG-linux5.4.0-73-generic.txt  (+130 more)
c/: CMakeLists.txt  README.md  README.txt  bobyqa_c.f90  cintrf.f90  cobyla_c.f90  lincoa_c.f90  newuoa_c.f90  prima.c  primac.def  questions  uobyqa_c.f90
c/examples/: README.md
c/examples/bobyqa/: CMakeLists.txt  bobyqa_example.c
c/examples/cobyla/: CMakeLists.txt  cobyla_example.c
c/examples/lincoa/: CMakeLists.txt  lincoa_example.c
c/examples/newuoa/: CMakeLists.txt  newuoa_example.c
c/examples/uobyqa/: CMakeLists.txt  uobyqa_example.c
c/include/prima/: prima.h  prima_internal.h  primal_internal.h
c/tests/: CMakeLists.txt  data.c  recursive.c  stress.c  t_large.c
fortran/: .gitignore  CMakeLists.txt  prima_f90  primaf-GNU.def  primaf-Intel.def
fortran/bobyqa/: bobyqa.f90  bobyqb.f90  flint  geometry.f90  initialize.f90  mlint  rescue.f90  trustregion.f90  update.f90  update.f90.1  update.f90.bak
fortran/classical/: README.txt
fortran/classical/bobyqa/: bobyqa.f90  rescue.f
fortran/classical/cobyla/: cobyla.f90  cobylb.f
fortran/classical/lincoa/: lincoa.f90  lincob.f  prelim.f
fortran/cobyla/: cobyla.bak  cobyla.f90  cobyla.f90.new  cobylb  cobylb.bak  cobylb.f90  geometry.f90  initialize.f90  mlint  trustregion.f90  trustregion.f90.bak  update.f90
fortran/common/: .gitignore  checkexit.f90  consts.F90  debug.F90  evaluate.f90  ffiles.txt  flint  fprint.f90  get_intrinsic_linalg  history.f90  huge.F90  inf.F90  infnan.F90  infos.f90  linalg.f90  linalg.f90.bak  linalg.f90.new  memory.F90  message.f90  mlint  output.f90  pintrf.f90  powalg.f90  powalg.f90.1  powalg.f90.latest  ppf.h  preproc.f90  rand.f90  redrho.f90  selectx.f90  shiftbase.f90  string.f90
fortran/examples/: .gitignore  Makefile.common  README.txt  fix
fortran/lincoa/: geometry.f90  getact.f90  initialize.f90  lincoa.f90  lincob.f90  trustregion.f90  update.f90
fortran/newuoa/: geometry.f90  initialize.f90  newuoa.f90  newuob.f90  newuob.f90.bak  newuob.f90.latest  trustregion.f90  trustregion.f90.latest  update.f90
fortran/notes/: How_To_Updgrade_To_Fortran_2018_Completely  How_To_Upgrade_To_Fortran_2018  Intro_PRIMA
fortran/tests/: 1  1.REMOVED.git-id  2  9src  Makefile  README.txt  \  a9src  checktest  fvdsrc  gsrc  sunsrc  test.F90  test.f90  test_bobyqa.f90  test_bobyqa.new.f90  test_cobyla.f90  test_lincoa.f90  test_newuoa.f90  test_newuoa.f90.new  test_uobyqa.f90
fortran/uobyqa/: geometry.f90  initialize.f90  trustregion.f90  uobyqa.f90  uobyqb.f90  update.f90
fortran/uobyqa.bak/: geometry.f90
fsrc/: 1  (+40 more)
pyprima/: README.md  meson.build
pyprima/profiles_vs_python_bindings/: profiles.py
pyprima/tests/: test_bounds.py  test_end_to_end.py  test_miscellaneous.py  test_pycutest.py
python/: .gitignore  CMakeLists.txt  Makefile  README.md  _prima.cpp  prima.py
python/examples/: bobyqa_example.py  cobyla_example.py  example_bobyqa.py  example_cobyla.py  example_lincoa.py  example_newuoa.py  example_uobyqa.py  lincoa_example.py  newuoa_example.py  objective.py  rosenbrock.py  rosenbrock_example.py  testpdfo.py  uobyqa_example.py
python/prima/: __init__.py  _bounds.py  _common.py  _linear_constraints.py  _nonlinear_constraints.py  infos.py
python/profiles/: bobyqa.txt  cobyla.txt  excludelist.py  lincoa.txt  matlab_wrapper.m  profiles.py  uobyqa_newuoa.txt
python/profiles_vs_bindings/: .gitignore  profiles.py
python/py_gateways/: bobyqa-interface.pyf  bobyqa.f90  cobyla-interface.pyf  cobyla.f90  gethuge-interface.pyf  gethuge.f90  lincoa-interface.pyf  lincoa.f90  newuoa-interface.pyf  newuoa.f90  pdfoconst-interface.pyf  uobyqa-interface.pyf  uobyqa.f90
python/tests/: README.md  conftest.py  objective.py  test_anonymous_lambda.py  test_basic_functionality.py  test_bounds.py  test_combining_constraints.py  test_compatibility_pdfo.py  test_compatibility_scipy.py  test_constraint_types.py  test_data_types.py  test_method_selection_warnings_and_exceptions.py  test_miscellaneous.py  test_options.py  test_process_linear_constraints.py  test_process_nonlinear_constraints.py  test_without_pybindings.py
(+4110 files in other folders)
