[build-system]
# scikit-build-core claims there's no need to explicitly specify Ninja,
# as it will "automatically be downloaded if needed", but I don't know
# how it determines "if needed", all I know is that we need it, particularly
# for Windows.
requires = ["scikit-build-core", "numpy", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "prima"
dependencies = ["numpy", "scipy >= 1.9.0"]
dynamic = ["version"]
# We will support all currently supported versions of Python, and additionally
# we will support any versions below that for which our tests pass without modification.
requires-python = ">= 3.10"

[dependency-groups]
dev = [ "poethepoet", "pycutest", "pytest", "pytest-cov"]

[tool.scikit-build]
cmake.args = ["-G Ninja", "-DBUILD_SHARED_LIBS=OFF", "-DPRIMA_ENABLE_PYTHON=ON"]
build.verbose = true
logging.level = "INFO"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/prima/_version.py"]
install.components = ["Prima_Python_C_Extension"]

[tool.setuptools_scm]  # Section required
version_file = "python/prima/_version.py"

[tool.uv]
cache-keys = [{file = "fortran/**"}, {file="c/**"}, {file="python/prima/backends/bindings/**"}, {file="pyproject.toml"}, {file="**/CMakeLists.txt"}]

[tool.poe.tasks]
coverage = {shell = "pytest -s --cov=. --cov-branch --cov-report html:prima_htmlcov --durations=20 python/tests"}

[tool.cibuildwheel]
build-verbosity = 3
test-command = "python -m pytest -s --durations=20 {project}/python/tests"
test-requires = ["pytest", "packaging"]
before-test = [
  # We need scipy and pdfo (which depends on scipy) for compatibility tests.
  # scipy is not available on all platforms we support, so we try to install it
  # if posssible, otherwise we skip it. The test will skip itself if it cannot
  # import scipy. "--only-binary" ensure we do not try to build scipy from
  # source (which requires special setup we have no intention of doing).
  "pip install --only-binary :all: scipy pdfo || true",
]
skip = [
  # On windows we get a complaint from CMake:
  # "CMake Error at python/pybind11/tools/FindPythonLibsNew.cmake:191 (message):
  #   Python config failure: Python is 32-bit, chosen compiler is 64-bit"
  # I do not see a way to install a 32-bit compiler with the setup-fortran action,
  # so we will just build 64-bit wheels on windows.
  "*-win32", 
  # Disable musllinux for the moment. It successfully built but there was an error when testing.
  # The error should be resolved by gfortran v14 -ftrampoline-impl=heap, but this isn't working,
  # it just changes the error from segfault to aborted.
  "*musllinux*",
  # SciPy does not provide binaries for 32-bit Python on Linux starting from 3.10.
  # As such we can compile but we cannot test, so we skip those.
  "cp31*-manylinux_i686",
  # Not sure why, but windows crashes when trying to test with 3.14t
  "cp314t-win*",
]
