add_executable(stress_c_exe EXCLUDE_FROM_ALL stress.c)
if (PRIMA_ENABLE_TESTING)
  set_target_properties (stress_c_exe PROPERTIES EXCLUDE_FROM_ALL FALSE)
endif ()
if (WIN32)
  set_target_properties(stress_c_exe PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
endif()
target_link_libraries(stress_c_exe PRIVATE primac)
add_dependencies(tests stress_c_exe)

add_test(NAME bobyqa_large_c COMMAND stress bobyqa)
add_test(NAME cobyla_large_c COMMAND stress cobyla)
add_test(NAME lincoa_large_c COMMAND stress lincoa)
add_test(NAME newuoa_large_c COMMAND stress newuoa)
add_test(NAME uobyqa_large_c COMMAND stress uobyqa)
