
macro (prima_add_c_test_multi name)
  add_executable(${name}_c_exe EXCLUDE_FROM_ALL ${name}.c)
  if (PRIMA_ENABLE_TESTING)
    set_target_properties (${name}_c_exe PROPERTIES EXCLUDE_FROM_ALL FALSE)
  endif ()
  if (WIN32)
    set_target_properties(${name}_c_exe PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
  endif()
  target_link_libraries(${name}_c_exe PRIVATE primac)
  add_dependencies(tests ${name}_c_exe)
add_test(NAME bobyqa_${name}_c COMMAND ${name}_c_exe bobyqa)
  add_test(NAME cobyla_${name}_c COMMAND ${name}_c_exe cobyla)
  add_test(NAME lincoa_${name}_c COMMAND ${name}_c_exe lincoa)
  add_test(NAME newuoa_${name}_c COMMAND ${name}_c_exe newuoa)
  add_test(NAME uobyqa_${name}_c COMMAND ${name}_c_exe uobyqa)
endmacro ()

prima_add_c_test_multi(stress)
prima_add_c_test_multi(data)
