
cmake_minimum_required(VERSION 3.13)
project(bobyqa_example Fortran)
find_package(PRIMA CONFIG REQUIRED)
add_executable(bobyqa_example_1 bobyqa_example_1.f90)
target_link_libraries(bobyqa_example_1 prima::primaf)
install(TARGETS bobyqa_example_1 DESTINATION bin)
add_executable(bobyqa_example_2 bobyqa_example_2.f90)
target_link_libraries(bobyqa_example_2 prima::primaf)
install(TARGETS bobyqa_example_2 DESTINATION bin)
