
cmake_minimum_required(VERSION 3.13)
project(newuoa_example Fortran)
find_package(PRIMA CONFIG REQUIRED)
add_executable(newuoa_example_1 newuoa_example_1.f90)
target_link_libraries(newuoa_example_1 prima::primaf)
install(TARGETS newuoa_example_1 DESTINATION bin)
add_executable(newuoa_example_2 newuoa_example_2.f90)
target_link_libraries(newuoa_example_2 prima::primaf)
install(TARGETS newuoa_example_2 DESTINATION bin)
