
cmake_minimum_required(VERSION 3.13)
project(uobyqa_example Fortran)
find_package(PRIMA CONFIG REQUIRED)
add_executable(uobyqa_example_1 uobyqa_example_1.f90)
target_link_libraries(uobyqa_example_1 prima::primaf)
install(TARGETS uobyqa_example_1 DESTINATION bin)
add_executable(uobyqa_example_2 uobyqa_example_2.f90)
target_link_libraries(uobyqa_example_2 prima::primaf)
install(TARGETS uobyqa_example_2 DESTINATION bin)
