
cmake_minimum_required(VERSION 3.13)
project(cobyla_example Fortran)
find_package(PRIMA CONFIG REQUIRED)
add_executable(cobyla_example_1 cobyla_example_1.f90)
target_link_libraries(cobyla_example_1 prima::primaf)
install(TARGETS cobyla_example_1 DESTINATION bin)
add_executable(cobyla_example_2 cobyla_example_2.f90)
target_link_libraries(cobyla_example_2 prima::primaf)
install(TARGETS cobyla_example_2 DESTINATION bin)
